--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,9 @@ a {
 .auth-nav .item + .item {
   margin-left: 30px;
 }
+.item::before {
+  display: inline-block;
+}
 .auth-nav .link-namber {
   display: block;
   padding-top: 32px;
@@ -132,10 +135,13 @@ a {
 /* герой */
 .hero-box {
   background-image: linear-gradient(
-      to right rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8),
       rgba(47, 48, 58, 0.8)
     ),
-    url(../img/Header-img.jpg);
+    url('../img/Header-img.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   width: 100%;
   height: 600px;
   /* background-color: var(--main-text-color); */
@@ -168,6 +174,14 @@ a {
 /* фючерс */
 .slogan {
   display: flex;
+}
+.icon-dia {
+  display: block;
+
+  padding: 33px 100px;
+  border-radius: 4px;
+  text-align: center;
+  background-color: #f5f4fa;
 }
 .slogan .slogan-up + .slogan-up {
   margin-left: 30px;
@@ -227,6 +241,34 @@ a {
 }
 
 /* сотрудники */
+.icon-social {
+  width: 44px;
+  height: 44px;
+  fill: #234523;
+}
+.icon-social:hover svg {
+  fill: var(--accent-color);
+}
+.networks {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  fill: #506cd3;
+}
+.networks:hover {
+  background-color: var(--accent-color);
+}
+.networks-list {
+  justify-content: space-evenly;
+}
+.team-list {
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
+}
 .team .team-list + .team-list {
   margin-left: 30px;
 }
@@ -266,8 +308,10 @@ a {
   background-color: #f5f4fa;
 }
 .social-networks {
+  justify-content: space-evenly;
   display: flex;
-  padding-top: 16px;
+  padding-top: 20px;
+  padding-bottom: 24px;
 }
 .section-employees {
   justify-content: center;
@@ -297,6 +341,8 @@ a {
   display: flex;
 }
 .customer-list {
+  display: inline-flex;
+  align-items: center;
   justify-content: center;
   width: 170px;
   height: 90px;
@@ -313,12 +359,14 @@ a {
   color: var(--accent-color);
   list-style: none;
 }
-.company .company-img {
+/* .company .company-img {
   display: block;
   align-items: baseline;
-}
+} */
 .slogan-img {
   display: block;
+  width: 270px;
+  height: 120px;
 
   padding: 25px 100px;
   border-radius: 4px;
@@ -334,6 +382,12 @@ a {
   height: 253px;
   background-color: #2f303a;
 }
+.networks-list-footer {
+  margin-right: 10px;
+}
+.networks-list-footer:last-child {
+  margin-right: 0;
+}
 .footer-box {
   height: 193px;
 }
@@ -342,12 +396,12 @@ a {
   align-items: baseline;
 }
 .footer-logo .pad-logo {
-  padding-top: 45px;
+  padding-top: 60px;
 }
 .address-cont {
   width: 231px;
 
-  padding-top: 8px;
+  padding-top: 20px;
 }
 
 .address .address-link:hover,
@@ -375,6 +429,7 @@ a {
   padding-left: 69px;
 }
 .push {
+  justify-content: flex-start;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -416,6 +471,9 @@ a {
   width: calc((100% - 30px * 2) / 3);
   box-sizing: border-box;
   border: 1px solid #eeeeee;
+
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .work-item:nth-child(3n) {
