--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,9 @@ img {
 .auth-nav .item + .item {
   margin-left: 30px;
 }
+.site-nav .link.active {
+  color: #2196f3;
+}
 
 .auth-nav .link-namber {
   display: inline-flex;
@@ -120,36 +123,42 @@ img {
   line-height: 0.87;
   letter-spacing: 0.02em;
 }
-
-.auth-nav .link-namber:hover,
-.auth-nav .link-namber:focus {
+.auth-nav a:hover,
+.auth-nav a:focus {
   color: var(--accent-color);
+  --color5: var(--accent-color);
 }
+/* .item .link-namber a:hover,
+.item .link-namber a:focus {
+  color: var(--accent-color);
+} */
 .link-namber {
   color: var(--main-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
 }
-.mail-icon:hover,
+/* .mail-icon:hover,
 .mail-icon:focus {
   --color5: var(--accent-color);
-}
+} */
 .mail-icon {
   width: 16px;
   height: 11.2px;
   margin-right: 10px;
   fill: #757575;
+  fill: currentColor;
 }
-.tel-icon:hover,
+/* .tel-icon:hover,
 .tel-icon:focus {
   --color5: var(--accent-color);
-}
+} */
 .tel-icon {
   width: 10px;
   height: 14.94px;
   margin-right: 10px;
   fill: #757575;
+  fill: currentColor;
 }
 
 /* скрытый h1 */
@@ -546,9 +555,32 @@ img {
   letter-spacing: 0.03em;
 }
 .work-linke {
+  display: inline-block;
   color: var(--main-text-color);
 }
+.portfolio-image {
+  position: relative;
+}
+.text-back {
+  position: absolute;
+  margin: 0;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
 
+  padding: 63px 24px;
+  background-color: rgba(33, 150, 243, 0.9);
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  color: #ffffff;
+
+  opacity: 0;
+}
+.text-back:hover {
+  opacity: 1;
+}
 .work-item .work-linke:hover,
 .work-item .work-linke:focus {
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
